Use littlefs instead of spiffs.

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,5 +1,6 @@
 ## IDF Component Manager Manifest File
 dependencies:
+  joltwallet/littlefs: "*"
   espressif/led_strip: "*"
   ## Required IDF version
   idf:
