Start at cli framework.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "init.c" "bt.c"
+idf_component_register(SRCS "init.c" "main.c" "bt.c" "cli.c"
                     INCLUDE_DIRS "")
