--- a/s3/develop/CMakeLists.txt
+++ b/s3/develop/CMakeLists.txt
@@ -3,4 +3,4 @@
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(esp32-io-bridge-s3)
+project(esp32-s3-develop)
