--- a/s3/develop/main/CMakeLists.txt
+++ b/s3/develop/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "init.c" "main.c" "bt.c" "cli.c" "otacli.c" "flash.c" "info.c" "packet.c" "util.c"
+idf_component_register(SRCS "init.c" "main.c" "bt.c" "cli.c" "otacli.c" "flash.c" "info.c" "log.c" "packet.c" "util.c"
                     INCLUDE_DIRS "")
