Initial support for displays.
Currently only supported "generic" SPI LCD displays (aka "TFT" displays
using ILItek and similar controllers).

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,8 @@ idf_component_register(
 		"cli.c"
 		"config.c"
 		"console.c"
+		"display.c"
+		"display-spi-generic.c"
 		"flash.c"
 		"fs.c"
 		"info.c"
