ledpwm: restructure, opaque pointer to handle.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -12,13 +12,13 @@ idf_component_register(
 		"io.c"
 		"init.c"
 		"ledpixel.c"
+		"ledpwm.c"
 		"log.c"
 		"notify.c"
 		"packet.c"
 		"perftest.c"
 		"ota.c"
 		"pdm.c"
-        "pwm-led.c"
 		"ramdisk.c"
 		"string.c"
 		"sensor.c"
