ledpixel: convert to C++.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,8 +13,8 @@ idf_component_register(
 		"info.cpp"
 		"io.cpp"
 		"init.cpp"
-		"ledpixel.c"
-		"ledpwm.c"
+		"ledpixel.cpp"
+		"ledpwm.cpp"
 		"log.c"
 		"mcpwm.c"
 		"notify.c"
