mcpwm: convert to C++.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -16,7 +16,7 @@ idf_component_register(
 		"ledpixel.cpp"
 		"ledpwm.cpp"
 		"log.cpp"
-		"mcpwm.c"
+		"mcpwm.cpp"
 		"notify.c"
 		"ota.c"
 		"packet.c"
