string/sensor: convert to C++.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -25,8 +25,8 @@ idf_component_register(
 		"process.cpp"
 		"ramdisk.cpp"
 		"script.cpp"
-		"string.c"
-		"sensor.c"
+		"string.cpp"
+		"sensor.cpp"
 		"tcp.cpp"
 		"udp.cpp"
 		"util.cpp"
