Add boost (for boost::format).

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -1,11 +1,11 @@
 ## IDF Component Manager Manifest File
 dependencies:
-  espressif/libpng: "*"
-  joltwallet/littlefs: "*"
-  espressif/led_strip: "*"
+  espressif/libpng: '*'
+  joltwallet/littlefs: '*'
+  espressif/led_strip: '*'
   ## Required IDF version
   idf:
-    version: ">=4.1.0"
+    version: '>=4.1.0'
   # # Put list of dependencies here
   # # For components maintained by Espressif:
   # component: "~1.0.0"
@@ -17,3 +17,4 @@ dependencies:
   #   # `public` flag doesn't have an effect dependencies of the `main` component.
   #   # All dependencies of `main` are public by default.
   #   public: true
+  espressif/esp-boost: '*'
