info,process: merged into system, converted to C++.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -13,7 +13,6 @@ idf_component_register(
 		"esp32-common/exception.cpp"
 		"fs.cpp"
         "i2c.cpp"
-		"info.cpp"
 		"io.cpp"
 		"init.cpp"
 		"ledpixel.cpp"
@@ -24,10 +23,10 @@ idf_component_register(
 		"ota.cpp"
 		"esp32-common/packet.cpp"
 		"pdm.cpp"
-		"process.cpp"
 		"ramdisk.cpp"
 		"script.cpp"
 		"sensor.cpp"
+		"system.cpp"
 		"tcp.cpp"
 		"udp.cpp"
 		"util.cpp"
